--- a/test.html
+++ b/test.html
@@ -1,4 +1,12 @@
-<h1>HEY YAA!!!!</h1>
-<p>Paragraph element</p>
-<a href="https://google.com" target="_blank" title="lets go to google">Click me! I'm a link!</a>
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>test page</title>
+</head>
+<body>
+	<h1>HEY You Girls Out there!!!!</h1>
+	<p><b>Its time to inspire and get inspired</b></p>
+	<a href="https://google.com" target="_blank" title="lets go to google">Click me! I'm a link!</a>
+	<img src="https://www.google.com/search?q=girl+power&sxsrf=ALeKk0003mPlNS_wkVWUpJwYoTiUlKQ1qw:1586876311232&source=lnms&tbm=isch&sa=X&ved=2ahUKEwikk9X2lujoAhXYxDgGHVRfAG0Q_AUoAXoECBMQAw&biw=1380&bih=641#imgrc=uxnx5v6LxnlzDM">
+</body>
+</html>
