--- a/firstpage.html
+++ b/firstpage.html
@@ -11,6 +11,10 @@
  <h2>This is heading</h2>
  <h6>This is another heading</h6>
 
+ <img src="https://mir-s3-cdn-cf.behance.net/project_modules/fs/8cba9b30761023.5639f18980df1.jpg" height="400" width="500">
+
+<a href="http://www.google.com">Click me to go to google</a>
+
  <p>Although in many countries women are <strong>achieving equality</strong> in health outcomes and primary school enrollment rates, the world has not seen the same kind of progress when it comes to <em>gender equity</em> in economic opportunity. Women consistently trail men in formal labor force participation, access to credit, savings rates, income levels, entrepreneurship rates, as well as in inheritance and ownership rights.</p>
 
  <p>Women typically invest in their families and communities significantly more than men – spreading wealth and increasing the quality of life for themselves and their families.PCI has made a commitment to ensure that all of our work includes an explicit focus on gender equality and women’s empowerment.</p>
@@ -29,6 +33,21 @@
  	<li>ellen</li>
  	<li>malala</li>
  </ul>
+
+ <table border="1">
+ 	<tr>
+ 		<th>Name</th>
+ 		<th>Work</th>
+ 	</tr>
+ 	<tr>
+ 		<td>oparah</td>
+ 		<td>Anchor</td>
+ 	</tr>
+ 	<tr>
+ 		<td>emma</td>
+ 		<td>Actor</td>
+ 	</tr>
+ </table>
 
 
 </body>
